# ml-crate

./: .gitignore  ARCH.md  CUDA-SETUP.md  Cargo.toml  DSPY-RS.md  DSPY_ARCHITECTURE.md  GAME_DESIGN.md  LICENSE  README.md
.claude/: AGENT-SETUP.md
.claude/agents/: dspy-researcher.md
.claude/knowledge/dspy/: INDEX.md  README.md  VERIFICATION.md
.claude/knowledge/dspy/dsrs-examples/: 01-simple-qa-pipeline.rs  02-miprov2-optimization.rs  03-module-iteration.rs  README.md
.claude/knowledge/dspy/learn/: 01-signatures.md  02-modules.md  03-language-models.md  04-optimizers.md  05-metrics-evaluation.md
.claude/knowledge/dspy/source/: adapter-trait.md  core-types.md  lm-struct.md  predictors-optimizers-evaluation.md
.claude/knowledge/dspy/tutorials/: rag-patterns.md
docs/: OPTIMIZATION-OPPORTUNITIES.md  PERFORMANCE.md
examples/: quick_test.rs
specs/: 01-candle-adapter.md  01-llamacpp-adapter.md  02-agent-registry.md  02-dspy-engine.md  03-context-builder.md  03-multi-backend-strategy.md  04-llamacpp-adapter.md  04-model-pool.md  05-hardware-manager.md  05-phase1-checklist.md  06-tool-registry.md  06-windows-build-setup.md  07-inference-api.md  07-phase2-checklist.md  08-dspy-engine-audit.md  08-dspy-engine-checklist.md  08-dspy-engine.md  08-phase3-checklist.md  09-phase4-checklist.md  10-phase5-checklist.md  ARCH.md  ARCHv2.md  PHASE-0-VERIFICATION.md  PHASE-1-VERIFICATION.md  PHASE-2-CHECKLIST.md  PHASE-2-VERIFICATION.md  PHASE-2B-COMPLETION-REPORT.md  PHASE-3A-CHECKLIST.md  PHASE-3A-HOTSWAP-CHECKLIST.md  PHASE-3B-TOOL-SYSTEM-CHECKLIST.md  candle-adapter-implementation-plan-v7.md
src/: lib.rs
src/adapters/: mod.rs
src/adapters/candle/: adapter.rs  config.rs  error.rs  mod.rs
src/adapters/llamacpp/: adapter.rs  config.rs  error.rs  mod.rs  types.rs
src/inference/: conversion.rs  engine.rs  error.rs  hotreload.rs  manifest.rs  mod.rs  module.rs  registry.rs
src/inference/rhai/: conversion.rs  error.rs  mod.rs  registration.rs  rhai_tool.rs
src/inference/tools/: error.rs  mod.rs  registry.rs  traits.rs  wrapper.rs
src/model_pool/: mod.rs
tests/: candle_adapter_debug.rs  dspy_engine_tests.rs  edge_cases.rs  integration_tests.rs
tests/fixtures/modules/: manifest.json  qa_simple.json  test_cot.json  test_predict.json  tool_enabled_module.json
